--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 src/plotter/videos/offline/Back Online.mp4
 src/plotter/videos/offline/Offline Intro V1.mp4
+src/plotter/videos/offline/Back Online V2.mp4
+src/plotter/videos/offline/Offline Intro V2.mp4
